<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none" >

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textSize="20dp"
            android:text="@string/rabin"
            android:textColor="@drawable/title1" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/boundary"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:lineSpacingExtra="7dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="15dp"
            android:paddingLeft="15dp"
            android:text="@string/rabin_text1"
            android:textColor="@drawable/title2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:lineSpacingExtra="7dp"
            android:text="@string/rabin_text2"
            android:textColor="@drawable/text" />

        <TextView
            android:lineSpacingExtra="7dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="15dp"
            android:paddingLeft="15dp"
            android:text="@string/rabin_text3"
            android:textColor="@drawable/title2" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/rabin"
            android:padding="0dp" />

        <TextView
            android:lineSpacingExtra="7dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="15dp"
            android:paddingLeft="15dp"
            android:text="@string/rabin_text4"
            android:textColor="@drawable/title2" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:lineSpacingExtra="7dp"
            android:textColor="@drawable/text"
            android:text="@string/rabin_text5" />

        <TextView
            android:lineSpacingExtra="7dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="15dp"
            android:paddingLeft="15dp"
            android:text="@string/rabin_text6"
            android:textColor="@drawable/title2" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:lineSpacingExtra="7dp"
            android:textColor="@drawable/text"
            android:text="@string/rabin_text7" />
        <TextView
            android:lineSpacingExtra="7dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="15dp"
            android:paddingLeft="15dp"
            android:text="@string/rabin_text8"
            android:textColor="@drawable/title2" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:lineSpacingExtra="7dp"
            android:textColor="@drawable/text"
            android:text="@string/rabin_text9"  />

        <TextView
            android:lineSpacingExtra="7dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="15dp"
            android:paddingLeft="15dp"
            android:text="@string/rabin_text10"
            android:textColor="@drawable/title2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="30dp"
            android:padding="15dp">
            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/rabin_edit_text"
                android:hint="@string/rabin_text11"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="rabinDemonstration"
                android:text="@string/rabin_button"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>